deployment/plat-app-services/catalogue/kcong/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: am-ingress
  namespace: kcong
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: assetmanager
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django
            port:
              number: 8000
      - path: /minio
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
